syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "POC.GrpcService";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetGuid (google.protobuf.Empty) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}


message GuidReply {
  string guid = 1;
}